--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
-
-/* Your CSS Code here. */
 #btn{
 	background-color:black;
 	color:white;
 	border-radius:5px;
-	border:none;
 }
 #btn:hover{
-	color:yellow;
+	background-color:yellow;
+	color:black;
 	border-radius:30px;
 }
